--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 neo4j = "^5.15.0"
 python-dateutil = "^2.8.2"
 ortools = "^9.8.3296"
+pydantic = "^2.5.2"
+fastapi = "^0.104.1"
+uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 
 
 [tool.poetry.group.dev.dependencies]
