--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^2.5.2"
 fastapi = "^0.104.1"
 uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 uuid = "^1.30"
+tabulate = "^0.9.0"
+py2neo = "^2021.2.4"
 
 
 [tool.poetry.group.dev.dependencies]
