--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 uuid = "^1.30"
 tabulate = "^0.9.0"
 py2neo = "^2021.2.4"
+python-dotenv = "^1.0.0"
+langchain = "^0.0.350"
+openai = "^1.3.8"
+pydantic-settings = "^2.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
