--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
-OPENAI_API_KEY=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
+# OPENAI_API_KEY=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
+# NEO4J_URI="bolt://localhost:7687"
+# NEO4J_USERNAME="neo4j"
+# NEO4J_PASSWORD="password"
+
+# LANGCHAIN_TRACING_V2=true
+# LANGCHAIN_API_KEY=ls__9a4753a1d933428d88230c94a902aa76
+
+# export OPENAI_API_KEY=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
+# export NEO4J_URI="bolt://localhost:7687"
+# export NEO4J_USERNAME="neo4j"
+# export NEO4J_PASSWORD="password"
+# export LANGCHAIN_TRACING_V2=true
+# export LANGCHAIN_API_KEY=ls__9a4753a1d933428d88230c94a902aa76
