--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.0"
 langchain = "^0.0.350"
 openai = "^1.3.8"
 pydantic-settings = "^2.1.0"
+langserve = "^0.0.36"
 
 
 [tool.poetry.group.dev.dependencies]
