--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ langchain = "^0.0.350"
 openai = "^1.3.8"
 pydantic-settings = "^2.1.0"
 langserve = "^0.0.36"
+pandas = "^2.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
