--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ openai = "^1.3.8"
 pydantic-settings = "^2.1.0"
 langserve = "^0.0.36"
 pandas = "^2.1.4"
+matplotlib = "^3.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
